--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -43,6 +43,13 @@ recover_velocity: 50
 
 [display_status]
 
+# Enable object exclusion
+[exclude_object]
+
+# Enable arcs support
+[gcode_arcs]
+resolution: 0.1
+
 [force_move]
 enable_force_move: True
 
