Added adaptive bed mesh in place of traditional prusa mesh

--- a/config/mk2s/config/mk2s/original-backups/probe.cfg
+++ b/config/mk2s/config/mk2s/original-backups/probe.cfg
@@ -20,7 +20,9 @@ speed: 10.0
 speed: 100
 mesh_min: 35,6
 mesh_max: 238,202
-algorithm: bicubic
+probe_count: 6,6
+mesh_pps: 2,2
+algorithm: lagrange
 
 # VALUES FROM THE ORIGINAL PRUSA FIRMWARE (FOR REFERENCE)
 #define MESH_MIN_X 35
