--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -4,7 +4,7 @@ serial: /dev/serial/by-id/usb-Prusa_Research__prusa3d.com__Original_Prusa_i3_MK2
 baud: 250000
 
 [virtual_sdcard]
-path: /home/jjepaah/printer_data/gcodes
+path: ~/printer_data/gcodes
 on_error_gcode: CANCEL_PRINT
      
 [include mk2s/config/mk2s/rambo.cfg]
@@ -59,6 +59,19 @@ shaper_freq_x: 64
 shaper_type_x: ei
 shaper_freq_y: 59.2
 shaper_type_y: mzv
+
+# Adaptive bed mesh
+[adaptive_bed_mesh]
+arc_segments: 80                     # (Optional) The number of segments for G2/3 to be decoded into linar motion. 
+mesh_area_clearance: 5               # (Optional) Expand the mesh area outside of the printed area in mm. 
+max_probe_horizontal_distance: 50    # (Optional) Maximum distance between two horizontal probe points in mm. 
+max_probe_vertical_distance: 50      # (Optional) Maximum distance between two vertical probe points in mm.
+use_relative_reference_index: False  # (Optional) For older Klipper (< 0.11.2xx), the `use_relative_reference_index` is used to determine the center point. This is not required for the newer release.
+
+# (Optional) Enable/Disable detection algorithm on demand
+disable_slicer_min_max_boundary_detection: False
+disable_exclude_object_boundary_detection: False
+disable_gcode_analysis_boundary_detection: False
 
 [temperature_sensor raspberry_pi]
 sensor_type: temperature_host
