Added PRINT_START macro

--- a/config/mk2s/config/custom/macro.cfg
+++ b/config/mk2s/config/custom/macro.cfg
@@ -6,6 +6,10 @@ gcode:
     BED_MESH_CALIBRATE
     G1 X0 Y0 Z0.4 F4000
 
+[gcode_macro PRINT_START]
+gcode:
+    ADAPTIVE_BED_MESH_CALIBRATE
+
 #Move SAVE_CONFIG backup to backups folder
 [gcode_macro SAVE_CONFIG_BACKUP]
 gcode:
