--- a/config/moonraker.conf
+++ b/config/moonraker.conf
@@ -44,3 +44,10 @@ origin: https://github.com/mainsail-crew/mainsail-config.git
 path: /home/jjepaah/mainsail-config
 primary_branch: master
 type: git_repo
+
+[update_manager client klipper_adaptive_bed_mesh]
+type: git_repo
+primary_branch: main
+path: ~/klipper_adaptive_bed_mesh
+origin: https://github.com/eamars/klipper_adaptive_bed_mesh.git
+install_script: install.sh
