--- a/config/mk2s/config/mk2s/probe.cfg
+++ b/config/mk2s/config/mk2s/probe.cfg
@@ -20,7 +20,7 @@ speed: 10.0
 speed: 100
 mesh_min: 35,6
 mesh_max: 238,202
-algorithm: bicubic
+algorithm: lagrange
 
 # VALUES FROM THE ORIGINAL PRUSA FIRMWARE (FOR REFERENCE)
 #define MESH_MIN_X 35
