Moved print start scripts to macro

--- a/config/mk2s/config/custom/macro.cfg
+++ b/config/mk2s/config/custom/macro.cfg
@@ -1,3 +1,23 @@
+[gcode_macro START_PRINT]
+gcode:
+    M115 U3.2.3 ; tell printer latest fw version
+    G90 ; use absolute coordinates
+    M83 ; extruder relative mode
+    M204 S[machine_max_acceleration_extruding] T[machine_max_acceleration_retracting] ; MK2 firmware only supports the old M204 format
+    M104 S[first_layer_temperature] ; set extruder temp
+    M140 S[first_layer_bed_temperature] ; set bed temp
+    M190 S[first_layer_bed_temperature] ; wait for bed temp
+    M109 S[first_layer_temperature] ; wait for extruder temp
+    G28 W ; home all without mesh bed level
+    ADAPTIVE_BED_MESH_CALIBRATE AREA_START={first_layer_print_min[0]},{first_layer_print_min[1]} AREA_END={first_layer_print_max[0]},{first_layer_print_max[1]} ; new adaptive mesh bed leveling
+    G92 E0.0 ; reset extruder
+    G1 X{first_layer_print_min[0]} Y{first_layer_print_min[1]-10} Z0.8 F6000.0 ; position 10mm down from the lower left of the first layer
+    G1 X{first_layer_print_min[0]+30} Y{first_layer_print_min[1]-10} E30 F360.0 ; extrude 30mm of filament in the x direction
+    G92 E0.0 ; reset extruder
+    G1 E-0.5 F2100 ; small retraction
+    G1 X{first_layer_print_min[0]+40} F6000.0 ; move an additional 10mm without extruding
+    G92 E0.0 ; reset extruder
+
 #Move SAVE_CONFIG backup to backups folder
 [gcode_macro SAVE_CONFIG_BACKUP]
 gcode:
